# deepindoor

./: README.md  start.sh  velodyne.sh  zed.sh
devel/: .catkin  local_setup.sh  setup.sh
devel/include/object_tracking/: DetectedObjectMsg.h
devel/lib/object_tracking/: dynamic_object_tracking_indoor_node  dynamic_object_tracking_node  object_tracking_indoor_node  object_tracking_node  object_tracking_outdoor_node
devel/lib/pkgconfig/: object_tracking.pc
devel/share/object_tracking/cmake/: object_tracking-msg-extras.cmake  object_tracking-msg-paths.cmake  object_trackingConfig.cmake
shell/: lio_sam.sh  run.sh  tracking.sh
src/object_tracking/: CMakeLists.txt  package.xml
src/object_tracking/config/: config.rviz  config2.rviz  config3.rviz  dynamic_object_tracking_indoor_config.rviz  object_tracking_indoor_config.rviz
src/object_tracking/include/object_tracking/: BasicObjectTracking.h  (+7 more)
src/object_tracking/launch/: dynamic_object_tracking.launch  dynamic_object_tracking_indoor.launch  object_tracking.launch  object_tracking_indoor.launch  object_tracking_outdoor.launch  rosbag.launch
src/object_tracking/msg/: DetectedObjectMsg.msg
src/object_tracking/src/: dynamic_object_tracking_indoor_node.cpp  dynamic_object_tracking_node.cpp  object_tracking_indoor_node.cpp  object_tracking_node.cpp  object_tracking_outdoor_node.cpp
src/object_tracking/src/lib/: BasicObjectTracking.cpp  CMakeLists.txt  DetectedObject.cpp  ObjectTracking.cpp  ObjectTrackingDynamicCarrier.cpp  ObjectTrackingIndoor.cpp  ObjectTrackingIndoorDynamicCarrier.cpp  ObjectTrackingOutdoor.cpp
(+10 files in other folders)
